--- a/imdb/Cargo.toml
+++ b/imdb/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.32", features = ["derive"] }
-actix-web = "4"
+actix-web = "4.0.0"
 tokio = { version = "1", features = ["full"] }
 reqwest = "0.11"
 bytes = "1.1"
 anyhow = "1.0"
+flate2 = "1.0"
